// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test all apis registerFieldMiddleware 1`] = `
Object {
  "": Object {
    "displayName": "FormState",
    "editable": undefined,
    "errors": Array [],
    "initialValues": Object {
      "aa": "123",
    },
    "initialized": true,
    "invalid": false,
    "loading": false,
    "mounted": true,
    "pristine": false,
    "props": Object {},
    "submitting": false,
    "unmounted": false,
    "valid": true,
    "validating": false,
    "values": Object {
      "aa": "aa change",
    },
    "warnings": Array [],
  },
  "aa": Object {
    "active": false,
    "display": true,
    "displayName": "FieldState",
    "editable": true,
    "effectErrors": Array [],
    "effectWarnings": Array [],
    "errors": Array [],
    "formEditable": undefined,
    "initialValue": "123",
    "initialized": true,
    "invalid": false,
    "loading": false,
    "modified": true,
    "mounted": true,
    "name": "aa",
    "path": "aa",
    "pristine": false,
    "props": Object {
      "default": "123",
      "type": "string",
      "x-props": Object {
        "data-testid": "input",
      },
    },
    "required": false,
    "ruleErrors": Array [],
    "ruleWarnings": Array [],
    "rules": Array [],
    "selfEditable": undefined,
    "touched": false,
    "unmounted": false,
    "valid": true,
    "validating": false,
    "value": "aa change",
    "values": Array [
      "aa change",
    ],
    "visible": true,
    "visited": false,
    "warnings": Array [],
  },
}
`;

exports[`test all apis registerFormField 1`] = `
Object {
  "": Object {
    "displayName": "FormState",
    "editable": undefined,
    "errors": Array [],
    "initialValues": Object {
      "aa": "123",
    },
    "initialized": true,
    "invalid": false,
    "loading": false,
    "mounted": true,
    "pristine": false,
    "props": Object {},
    "submitting": false,
    "unmounted": false,
    "valid": true,
    "validating": false,
    "values": Object {
      "aa": "aa change",
    },
    "warnings": Array [],
  },
  "aa": Object {
    "active": false,
    "display": true,
    "displayName": "FieldState",
    "editable": true,
    "effectErrors": Array [],
    "effectWarnings": Array [],
    "errors": Array [],
    "formEditable": undefined,
    "initialValue": "123",
    "initialized": true,
    "invalid": false,
    "loading": false,
    "modified": true,
    "mounted": true,
    "name": "aa",
    "path": "aa",
    "pristine": false,
    "props": Object {
      "default": "123",
      "type": "string",
      "x-props": Object {
        "data-testid": "input",
      },
    },
    "required": false,
    "ruleErrors": Array [],
    "ruleWarnings": Array [],
    "rules": Array [],
    "selfEditable": undefined,
    "touched": false,
    "unmounted": false,
    "valid": true,
    "validating": false,
    "value": "aa change",
    "values": Array [
      "aa change",
    ],
    "visible": true,
    "visited": false,
    "warnings": Array [],
  },
}
`;

exports[`test all apis registerVirtualBox 1`] = `
Object {
  "": Object {
    "displayName": "FormState",
    "editable": undefined,
    "errors": Array [],
    "initialValues": Object {
      "aa": "123",
    },
    "initialized": true,
    "invalid": false,
    "loading": false,
    "mounted": true,
    "pristine": false,
    "props": Object {},
    "submitting": false,
    "unmounted": false,
    "valid": true,
    "validating": false,
    "values": Object {
      "aa": "aa change",
    },
    "warnings": Array [],
  },
  "cc": Object {
    "display": true,
    "displayName": "VirtualFieldState",
    "initialized": true,
    "mounted": true,
    "name": "cc",
    "path": "cc",
    "props": Object {
      "type": "object",
      "x-component": "box",
    },
    "unmounted": false,
    "visible": true,
  },
  "cc.aa": Object {
    "active": false,
    "display": true,
    "displayName": "FieldState",
    "editable": true,
    "effectErrors": Array [],
    "effectWarnings": Array [],
    "errors": Array [],
    "formEditable": undefined,
    "initialValue": "123",
    "initialized": true,
    "invalid": false,
    "loading": false,
    "modified": true,
    "mounted": true,
    "name": "aa",
    "path": "cc.aa",
    "pristine": false,
    "props": Object {
      "default": "123",
      "type": "string",
      "x-props": Object {
        "data-testid": "input",
      },
    },
    "required": false,
    "ruleErrors": Array [],
    "ruleWarnings": Array [],
    "rules": Array [],
    "selfEditable": undefined,
    "touched": false,
    "unmounted": false,
    "valid": true,
    "validating": false,
    "value": "aa change",
    "values": Array [
      "aa change",
    ],
    "visible": true,
    "visited": false,
    "warnings": Array [],
  },
}
`;

exports[`test all apis registerVirtualBox 2`] = `undefined`;

exports[`test all apis registerVirtualBox 3`] = `undefined`;

exports[`test all apis registerVirtualBox 4`] = `undefined`;

exports[`test all apis registerVirtualBox 5`] = `undefined`;

exports[`test all apis registerVirtualBox 6`] = `undefined`;

exports[`test all apis registerVirtualBox 7`] = `undefined`;

exports[`test all apis registerVirtualBox 8`] = `undefined`;

exports[`test all apis registerVirtualBox 9`] = `undefined`;

exports[`test all apis registerVirtualBox 10`] = `undefined`;

exports[`test all apis registerVirtualBox 11`] = `undefined`;

exports[`test all apis registerVirtualBox 12`] = `undefined`;

exports[`test all apis registerVirtualBox 13`] = `undefined`;

exports[`test all apis registerVirtualBox 14`] = `undefined`;

exports[`test all apis registerVirtualBox 15`] = `undefined`;

exports[`test all apis registerVirtualBox 16`] = `undefined`;

exports[`test all apis registerVirtualBox 17`] = `undefined`;

exports[`test all apis registerVirtualBox 18`] = `undefined`;

exports[`test all apis registerVirtualBox 19`] = `undefined`;

exports[`test all apis registerVirtualBox 20`] = `undefined`;

exports[`test all apis registerVirtualBox 21`] = `undefined`;

exports[`test all apis registerVirtualBox 22`] = `undefined`;

exports[`test all apis registerVirtualBox 23`] = `undefined`;

exports[`test all apis registerVirtualBox 24`] = `undefined`;

exports[`test all apis registerVirtualBox 25`] = `undefined`;

exports[`test all apis registerVirtualBox 26`] = `undefined`;

exports[`test all apis registerVirtualBox 27`] = `undefined`;

exports[`test all apis registerVirtualBox 28`] = `undefined`;

exports[`test all apis registerVirtualBox 29`] = `undefined`;

exports[`test all apis registerVirtualBox 30`] = `undefined`;

exports[`test all apis registerVirtualBox 31`] = `undefined`;

exports[`test all apis registerVirtualBox 32`] = `undefined`;

exports[`test all apis registerVirtualBox 33`] = `undefined`;

exports[`test all apis registerVirtualBox 34`] = `undefined`;

exports[`test all apis registerVirtualBox 35`] = `undefined`;

exports[`test all apis registerVirtualBox 36`] = `undefined`;

exports[`test all apis registerVirtualBox 37`] = `undefined`;

exports[`test all apis registerVirtualBox 38`] = `undefined`;

exports[`test all apis registerVirtualBox 39`] = `undefined`;

exports[`test all apis registerVirtualBox 40`] = `undefined`;

exports[`test all apis registerVirtualBox 41`] = `undefined`;

exports[`test all apis registerVirtualBox 42`] = `undefined`;

exports[`test all apis registerVirtualBox 43`] = `undefined`;

exports[`test all apis registerVirtualBox 44`] = `undefined`;

exports[`test all apis registerVirtualBox 45`] = `undefined`;

exports[`test all apis registerVirtualBox 46`] = `undefined`;

exports[`test all apis registerVirtualBox 47`] = `undefined`;

exports[`test all apis registerVirtualBox 48`] = `undefined`;

exports[`test all apis registerVirtualBox 49`] = `undefined`;

exports[`test all apis registerVirtualBox 50`] = `undefined`;

exports[`test all apis registerVirtualBox 51`] = `undefined`;

exports[`test all apis registerVirtualBox 52`] = `undefined`;

exports[`test all apis registerVirtualBox 53`] = `undefined`;

exports[`test all apis registerVirtualBox 54`] = `undefined`;

exports[`test all apis registerVirtualBox 55`] = `undefined`;

exports[`test all apis registerVirtualBox 56`] = `undefined`;

exports[`test all apis registerVirtualBox 57`] = `undefined`;

exports[`test all apis registerVirtualBox 58`] = `undefined`;

exports[`test all apis registerVirtualBox 59`] = `undefined`;

exports[`test all apis registerVirtualBox 60`] = `undefined`;

exports[`test all apis registerVirtualBox 61`] = `undefined`;

exports[`test all apis registerVirtualBox 62`] = `undefined`;

exports[`test all apis registerVirtualBox 63`] = `undefined`;

exports[`test all apis registerVirtualBox 64`] = `undefined`;

exports[`test all apis registerVirtualBox 65`] = `undefined`;

exports[`test all apis registerVirtualBox 66`] = `undefined`;

exports[`test all apis registerVirtualBox 67`] = `undefined`;

exports[`test all apis registerVirtualBox 68`] = `undefined`;

exports[`test all apis registerVirtualBox 69`] = `undefined`;

exports[`test all apis registerVirtualBox 70`] = `undefined`;

exports[`test all apis registerVirtualBox 71`] = `undefined`;

exports[`test all apis registerVirtualBox 72`] = `undefined`;

exports[`test all apis registerVirtualBox 73`] = `undefined`;

exports[`test all apis registerVirtualBox 74`] = `undefined`;

exports[`test all apis registerVirtualBox 75`] = `undefined`;

exports[`test all apis registerVirtualBox 76`] = `undefined`;

exports[`test all apis registerVirtualBox 77`] = `undefined`;

exports[`test all apis registerVirtualBox 78`] = `undefined`;

exports[`test all apis registerVirtualBox 79`] = `undefined`;

exports[`test all apis registerVirtualBox 80`] = `undefined`;

exports[`test all apis registerVirtualBox 81`] = `undefined`;

exports[`test all apis registerVirtualBox 82`] = `undefined`;

exports[`test all apis registerVirtualBox 83`] = `undefined`;

exports[`test all apis registerVirtualBox 84`] = `undefined`;

exports[`test all apis registerVirtualBox 85`] = `undefined`;

exports[`test all apis registerVirtualBox 86`] = `undefined`;

exports[`test all apis registerVirtualBox 87`] = `undefined`;

exports[`test all apis registerVirtualBox 88`] = `undefined`;

exports[`test all apis registerVirtualBox 89`] = `undefined`;

exports[`test all apis registerVirtualBox 90`] = `undefined`;

exports[`test all apis registerVirtualBox 91`] = `undefined`;
